--- a/views/dados.handlebars
+++ b/views/dados.handlebars
@@ -16,7 +16,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"> <strong class="sena"><i>SENA</i></strong><strong><i>BANK</i></strong></a>
+      <a class="navbar-brand" href="#"> <strong class="sena"><i>Economic</i></strong><strong><i>Fit</i></strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,11 +34,10 @@
             <a class="nav-link " href="/dados">Dados</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/squad">Squad</a>
-          </li>
+            
         </ul>
         <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">Buscar</button></a>
         </form>
       </div>
     </nav>
@@ -54,24 +53,19 @@
         <a href="/clie"><button type="button" style="background: none; color: #ffa700"
             class="btn btn-outline-warning">Dados de Clientes</button></a>
         <a href="/age"><button type="button" style="background: none; color: #ffa700"
-            class="btn btn-outline-warning">Dados de agências</button></a>
+            class="btn btn-outline-warning">Dados de Academias</button></a>
 
       </div>
       <br><br>
       <div class="botoes">
         <a href="/cont"><button type="button" style="background: none; color: #ffa700"
-            class="btn btn-outline-warning">Dados de contas</button></a>
+            class="btn btn-outline-warning">Dados de produtos</button></a>
         <a href="/cart"><button type="button" style="background: none; color: #ffa700"
-            class="btn btn-outline-warning">Dados de cartões</button></a>
+            class="btn btn-outline-warning">Dados de funcionarios</button></a>
       </div>
       <br><br>
 
-      <div class="botoes">
-        <a href="/emp"><button type="button" style="background: none; color: #ffa700"
-            class="btn btn-outline-warning">Dados de empréstimos</button></a>
-        <a href="/fun"><button type="button" style="background: none; color: #ffa700"
-            class="btn btn-outline-warning">Dados de funcionários</button></a>
-      </div>
+    
       <br><br>
 
 
