--- a/views/funcionarios.handlebars
+++ b/views/funcionarios.handlebars
@@ -36,7 +36,7 @@
                     </li>
                 </ul>
                 <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">buscar</button></a>
                 </form>
             </div>
         </nav>
