--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,13 +35,14 @@
           </li>
         </ul>
         <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">Buscar</button></a>
         </form>
       </div>
     </nav>
   </header>
 
   <h2><strong>ECONOMIC</strong><strong class="bank">FIT</strong></h2>
+  <h4><strong class="bank">Uma academia que você pode pagar!</strong> </h4>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
