--- a/publico/css/home.css
+++ b/publico/css/home.css
@@ -6,6 +6,7 @@ header {
     position: fixed;
     z-index: 1;
     width: 100%;
+    background-color: #0b52d6;
 }
 
 
@@ -16,6 +17,12 @@ h2 {
     font-size: 80px;
 }
 
+h4 {
+    color: white;
+    text-align: center;
+    padding-top: 2em;
+    font-size: 80px;
+}
 .bg-light {
     background-color: white !important;
 }
@@ -29,9 +36,9 @@ h2 {
 }
 
 .btn {
-    color: #fff;
+    color: #0e0d0d;
     border-color: #ff6600;
-    background-color: #ff6600;
+    background-color: #ff7300;
 }
 
 .navbar-brand {
