--- a/views/age.handlebars
+++ b/views/age.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Agências</title>
+    <title></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/publico/css/visu.css">
@@ -16,7 +16,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"> <strong class="sena"><i>ECONOMICFIT</i></strong><strong><i>ACADEMY</i></strong></a>
+            <a class="navbar-brand" href="#"> <strong class="sena"><i>Economic</i></strong><strong><i>Fit</i></strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,19 +34,17 @@
                     <li class="nav-item">
                         <a class="nav-link " href="/dados">Dados</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="/squad">Squad</a>
-                    </li>
+              
                 </ul>
                 <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">buscar</button></a>
                 </form>
             </div>
         </nav>
     </header>
 
     <div class="margem">
-        <h1>Agência</h1>
+      
         <div class="conjunto">
             {{#each listar}}
 
@@ -57,7 +55,7 @@
                     <p class="card-text">Email: {{email}}<br>Telefone: {{telefone}}</p>
 
                     <button type="submit" value="Buscar" class="btn btn-outline-warning"><a
-                            href="/age/{{this.id_da_agencia}}" class="card-link"> Mais informações</a></button>
+                            href="/age/{{this.id_da_agencia}}" class="card-link"> Editar</a></button>
                 </div>
             </div>
             {{/each}}
