--- a/views/cadastro.handlebars
+++ b/views/cadastro.handlebars
@@ -35,7 +35,7 @@
                     </li>
                 </ul>
                 <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">Buscar</button></a>
                 </form>
             </div>
         </nav>
@@ -47,7 +47,7 @@
         <div class="btscad">
 
             <div class="botoes">
-                <a href="#cadCL"><button type="button" style="background: none; color: #ff6600"
+                <a href="#cadastro.handlebars"><button type="button" style="background: none; color: #ff6600"
                         class="btn btn-outline-warning">Cadastro de Cliente</button></a>
                 <a href="#cadA"><button type="button" style="background: none; color: #ff6600"
                         class="btn btn-outline-warning">Cadastro de Produtos</button></a>
@@ -55,9 +55,9 @@
             </div>
             <br><br>
             <div class="botoes">
-                <a href="#cadE"><button type="button" style="background: none; color: #ff6600"
+                <a href="#cadE"><button type="button" style="background: none; color: #ffffff"
                         class="btn btn-outline-warning">Cadastro de Funcionario</button></a>
-                <a href="#cadA"><button type="button" style="background: none; color: #ff6600"
+                <a href="#cadA"><button type="button" style="background: none; color: #fffefe"
                         class="btn btn-outline-warning">Cadastro de Academias</button></a>
             </div>
             <br><br>
