--- a/views/cont.handlebars
+++ b/views/cont.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Contas</title>
+    <title>Produtos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/publico/css/visu.css">
@@ -16,7 +16,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"> <strong class="sena"><i>SENA</i></strong><strong><i>BANK</i></strong></a>
+            <a class="navbar-brand" href="#"> <strong class="sena"><i>Economic</i></strong><strong><i>Fit</i></strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,19 +34,17 @@
                     <li class="nav-item">
                         <a class="nav-link " href="/dados">Dados</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="/squad">Squad</a>
-                    </li>
+                    
                 </ul>
                 <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">Buscar</button></a>
                 </form>
             </div>
         </nav>
     </header>
 
     <div class="margem">
-        <h1>Cadastros de contas</h1>
+        <h1>Cadastros de Produtos</h1>
         <div class="conjunto">
             {{#each listar}}
 
@@ -54,7 +52,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{this.id_da_conta}}</h5>
                     <h6 class="card-subtitle mb-2 text-muted"> Nome: {{nome_cliente}}</h6>
-                    <p class="card-text">Saldo: {{saldo}}<br>Tipo de conta: {{tipo_de_conta}}</p>
+                    <p class="card-text">quantidade: {{saldo}}<br>Tipo de produto: {{tipo_de_conta}}</p>
 
                     <button type="submit" value="Buscar" class="btn btn-outline-warning"><a
                             href="/cont/{{this.id_da_conta}}" class="card-link"> Mais informações</a></button>
