--- a/views/contas.handlebars
+++ b/views/contas.handlebars
@@ -16,7 +16,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"> <strong class="sena"><i>SENA</i></strong><strong><i>BANK</i></strong></a>
+            <a class="navbar-brand" href="#"> <strong class="sena"><i>Economic</i></strong><strong><i>Fit</i></strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,32 +34,28 @@
                     <li class="nav-item">
                         <a class="nav-link " href="/dados">Dados</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="/squad">Squad</a>
-                    </li>
+                    
                 </ul>
                  <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">buscar</button></a>
                 </form>
             </div>
         </nav>
     </header>
 
     <div class="clientes">
-        <h1>Contas</h1>
+        <h1></h1>
         <h3>{{listarCont.nome_cliente}}</h3>
 
         <div class="card" style="width: 28rem;">
             <div class="card-body">
-                <h5 class="card-title">Número da conta:</h5>
+                <h5 class="card-title">Número do produto:</h5>
                 <p class="card-text"> {{listarCont.id_da_conta}}</p>
-                <h5 class="card-title">CPF do cliente:</h5>
-                <p class="card-text"> {{listarCont.cpf}}</p>
-                <h5 class="card-title">Id da Agência:</h5>
+                <h5 class="card-title">Preço:</h5>
                 <p class="card-text"> {{listarCont.id_da_agencia}} </p>
-                <h5 class="card-title">Tipo do conta:</h5>
+                <h5 class="card-title">Tipo do produto:</h5>
                 <p class="card-text"> {{listarCont.tipo_de_conta}} </p>
-                <h5 class="card-title">Saldo:</h5>
+                <h5 class="card-title">quantidade:</h5>
                 <p class="card-text"> {{listarCont.saldo}} </p>
 
                 <button type="button" class="btn btn-outline-warning"><a
