--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -15,7 +15,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"> <strong class="sena"><i>SENA</i></strong><strong><i>BANK</i></strong></a>
+      <a class="navbar-brand" href="#"> <strong class="sena"><i>Economic</i></strong><strong><i>Fit</i></strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,12 +32,9 @@
           <li class="nav-item">
             <a class="nav-link " href="/dados">Dados</a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="/squad">Squad </a>
-          </li>
         </ul>
         <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">Buscar</button></a>
         </form>
       </div>
     </nav>
@@ -81,24 +78,7 @@
             value="{{clie.endereco_cliente}}">
         </div>
 
-        <div class="form-group">
-          <label for="exampleInputEmail1">ID do empréstimo:</label>
-          <input class="form-control" name="id_do_emprestimo" placeholder="Digite o id do empréstimo"
-            value="{{clie.id_do_emprestimo}}">
-        </div>
-
-        <div class="form-group">
-          <label for="exampleInputEmail1">Numero do cartão:</label>
-          <input class="form-control" name="numero_do_cartao" placeholder="Digite o id do cartão"
-            value="{{clie.numero_do_cartao}}">
-        </div>
-
-        <div class="form-group">
-          <label for="exampleInputEmail1">Agencia:</label>
-          <input class="form-control" name="id_da_agencia" placeholder="Digite a sua agência"
-            value="{{clie.id_da_agencia}}">
-        </div>
-
+        
         <div class="form-group">
           <button type="submit" value="Editar" class="btn btn-warning">Editar</button>
         </div>
