--- a/views/editCont.handlebars
+++ b/views/editCont.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-  <title>Editar contas</title>
+  <title>Editar produtos</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/publico/css/edit.css">
@@ -16,7 +16,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"> <strong class="sena"><i>SENA</i></strong><strong><i>BANK</i></strong></a>
+      <a class="navbar-brand" href="#"> <strong class="sena"><i>Economic</i></strong><strong><i>Fit</i></strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,12 +33,10 @@
           <li class="nav-item">
             <a class="nav-link " href="/dados">Dados</a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="/squad">Squad </a>
-          </li>
+         
         </ul>
         <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">Buscar</button></a>
         </form>
       </div>
     </nav>
@@ -46,7 +44,7 @@
 
 <div class="form">
   <div class="margem">
-    <h1>Editar Conta</h1>
+    <h1>Editar produto</h1>
 
     <form action="/cont/updatecont" method="post">
       <div class="form-group">
@@ -54,33 +52,29 @@
       </div>
 
       <div class="form-group">
-        <label for="exampleInputCpf1">Nome do cliente:</label>
+        <label for="exampleInputCpf1">Nome do produto:</label>
         <input type="text" class="form-control" name="nome_cliente" placeholder="Digite o nome do cliente"
           value="{{cont.nome_cliente}}">
       </div>
 
       <div class="form-group">
-        <label for="exampleInputEmail1">CPF:</label>
+        <label for="exampleInputEmail1">numero do produto:</label>
         <input class="form-control" name="cpf" placeholder="Digite o CPF do cliente"
           value="{{cont.cpf}}">
       </div>
 
       <div class="form-group">
-        <label for="exampleInputEmail1">Tipo de conta:</label>
+        <label for="exampleInputEmail1">Tipo de produto:</label>
         <input class="form-control" name="tipo_de_conta" placeholder="Digite o tipo de conta"
           value="{{cont.tipo_de_conta}}">
       </div>
 
       <div class="form-group">
-        <label for="exampleInputEmail1">Saldo:</label>
+        <label for="exampleInputEmail1">quantidade:</label>
         <input class="form-control" name="saldo" placeholder="Digite o saldo da conta" value="{{cont.saldo}}">
       </div>
 
-      <div class="form-group">
-        <label for="exampleInputEmail1">Agência:</label>
-        <input class="form-control" name="id_da_agencia" placeholder="Digite o ID da agência"
-          value="{{cont.id_da_agencia}}">
-      </div>
+    
 
       <div class="form-group">
         <button type="submit" value="Editar" class="btn btn-warning">Editar</button>
