--- a/views/editE.handlebars
+++ b/views/editE.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-  <title>Editar empréstimos</title>
+  <title></title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/publico/css/edit.css">
@@ -16,7 +16,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"> <strong class="sena"><i>SENA</i></strong><strong><i>BANK</i></strong></a>
+      <a class="navbar-brand" href="#"> <strong class="sena"><i>Economic</i></strong><strong><i>Fit</i></strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,12 +33,10 @@
           <li class="nav-item">
             <a class="nav-link " href="/dados">Dados</a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="/squad">Squad </a>
-          </li>
+         
         </ul>
         <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">Buscar</button></a>
         </form>
       </div>
     </nav>
@@ -46,7 +44,7 @@
 
   <div class="form">
     <div class="margem">
-      <h1>Editar Empréstimo</h1>
+      <h1></h1>
 
       <form action="/emp/updateemp" method="post">
         <div class="form-group">
@@ -61,13 +59,13 @@
 
         <div class="form-group">
           <label for="exampleInputEmail1">Valor:</label>
-          <input class="form-control" name="emprestimo" placeholder="Digite o valor do empréstimo"
+          <input class="form-control" name="emprestimo" placeholder=""
             value="{{emp.valor_emprestimo}}">
         </div>
 
         <div class="form-group">
           <label for="exampleInputEmail1">Parcelas:</label>
-          <input class="form-control" name="parcelas" placeholder="Digite quantas parcelas" value="{{emp.parcelas}}">
+          <input class="form-control" name="parcelas" placeholder="" value="{{emp.parcelas}}">
         </div>
 
         <div class="form-group">
@@ -77,7 +75,7 @@
 
         <div class="form-group">
           <label for="exampleInputEmail1">Data:</label>
-          <input class="form-control" name="data" placeholder="Digite a data do empréstimo" value="{{emp.data}}">
+          <input class="form-control" name="data" placeholder="" value="{{emp.data}}">
         </div>
 
         <div class="form-group">
