--- a/views/editF.handlebars
+++ b/views/editF.handlebars
@@ -16,7 +16,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"> <strong class="sena"><i>SENA</i></strong><strong><i>BANK</i></strong></a>
+      <a class="navbar-brand" href="#"> <strong class="sena"><i>Economic</i></strong><strong><i>Fit</i></strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,12 +33,10 @@
           <li class="nav-item">
             <a class="nav-link " href="/dados">Dados</a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="/squad">Squad </a>
-          </li>
+
         </ul>
         <a href="/busca"><button type="submit" style="width: 94px;
-    height: 37px;" class="btn btn-warning">Pesquisar</button></a>
+    height: 37px;" class="btn btn-warning">Buscar</button></a>
         </form>
       </div>
     </nav>
@@ -46,7 +44,7 @@
 
   <div class="form">
     <div class="margem">
-      <h1>Editar Funcionário</h1>
+      <h1></h1>
 
       <form action="/fun/updatefun" method="post">
         <div class="form-group">
@@ -56,7 +54,7 @@
 
         <div class="form-group">
           <label for="exampleInputCpf1">Nome:</label>
-          <input type="text" class="form-control" name="nome" placeholder="Digite o nome do funcionário"
+          <input type="text" class="form-control" name="nome" placeholder=""
             value="{{fun.nome}}">
         </div>
 
